--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 body{
 margin-left: 2em;
-max-width: 30em;
+/* max-width: 320vw; */
 font-family: 'IBM Plex Sans', sans-serif;
 
 }
@@ -18,7 +18,7 @@ margin-bottom: 2em;
     height: 4.5em;
 }
 
-.hamburger_placeholder{
+.hamburger-placeholder{
     height:2.5em;
     margin-left: 20em;
     margin-top: 0.9em;
@@ -26,7 +26,7 @@ margin-bottom: 2em;
 
 
 
-.digital_natives{
+.digital-natives{
     height: 4em;
     margin-bottom: 1em;
 }
@@ -35,54 +35,53 @@ margin-bottom: 2em;
     opacity: 1;
     font-size: 19px;
     margin-bottom: 2em;
-}
-    /* transition: all 1s;
-    transform: translateZ(-100%);
-    filter: blur(3px); 
+    transition: all 1s;
+    transform: translateY(100%);
+    filter: blur(1px); 
 }
 .show{
     opacity: 1;
     filter: blur(0);
-    transform: translateX(0);
-} */
+    transform: translateY(0);
+}
 
 
-.group_img{
+.group-img{
   height: 18em;
   width: 27em;
   border-radius: 0.3em;
   margin-bottom: 3em;
 }
 
-.team_container{
+.team-container{
     display: grid;
 
 } 
 
-.team_members{
+.team-members{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    flex-wrap: wrap;
+    position: relative;
 }
 
-.team_member_card{
-    margin-right: 1.3em;
-    height: 20em;
-    width: 11.2em;
-    margin-bottom: 2em;
+.team-member-card{
+    margin-bottom: 1em;
+    margin-left: 0.5em;
 }
 
 
-.team_member_img{
-    height: 17em;
+.team-member-img{
+    height: 18.5em;
     border-radius: 0.3em;
 }
 
-.member_name{
+.member-name{
     font-size: 16px;
 }
 
-.member_job{
+.member-job{
     font-size: 14px;
     margin-bottom: 2em;
     margin-top: 0.5em;
@@ -93,7 +92,7 @@ margin-bottom: 2em;
     color: rgb(122, 126, 126);
 }
 
-.display_imgs{
+.display-imgs{
     height: 20em;
 }
 
