--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@ font-family: 'IBM Plex Sans', sans-serif;
 header{
 display: flex;
 width: 100%;
-background-color: white;
 flex-direction: row;
 margin-bottom: 1em;
+/* position: fixed;
+z-index: 1; */
 }
 
 .logo{
@@ -99,4 +100,25 @@ margin-bottom: 1em;
 
 footer{
 
+}
+
+/* tablet scherm */
+@media screen and (min-width: 768px) {
+    body{
+    background-color: rgb(151, 151, 151);
+}
+}
+
+/* laptop scherm */
+@media screen and (min-width: 1024px) {
+    body {
+        background-color: rgb(255, 97, 231);
+    }
+}
+
+/* groot laptop scherm */
+@media screen and (min-width: 1440px) {
+    body {
+        background-color: rgb(97, 210, 255);
+    }
 }
