--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 
 body{
-margin-left: 1em;
+margin: 1;
 font-family: 'IBM Plex Sans', sans-serif;
 
 }
@@ -36,6 +36,7 @@ z-index: 1; */
 .text{
     font-size: 19px;
     margin-bottom: 2em;
+    width: 25em;
 
 }
 .text2{
@@ -45,6 +46,7 @@ z-index: 1; */
     transition: all 360ms ease-out;
     transition: transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6);
     transform: translateY(100%);
+    width: 25em;
 }
 .show{
     opacity: 1;
@@ -151,6 +153,7 @@ z-index: 1; */
     height: 18em;
     margin-bottom: 6em;
     margin-top: 2em;
+    width: 25em;
 }
 
 
@@ -160,15 +163,17 @@ footer{
 
 /* tablet scherm */
 @media screen and (min-width: 768px) {
-
+    
 }
 
 /* laptop scherm */
 @media screen and (min-width: 1024px) {
-    
+    main{
+    }
 }
 
 /* groot laptop scherm */
 @media screen and (min-width: 1440px) {
  
 }
+
