--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
 body{
 margin: 1;
 font-family: 'IBM Plex Sans', sans-serif;
+display: flex;
+flex-direction: column;
+
 
 }
 
@@ -16,6 +19,7 @@ margin-bottom: 1em;
 z-index: 1; */
 }
 
+
 .logo{
     height:5em;
 }
@@ -26,7 +30,9 @@ z-index: 1; */
     margin-top: 1.5em;
 }
 
-
+main{
+ 
+}
 
 .digital-natives{
     height: 4em;
@@ -61,14 +67,15 @@ z-index: 1; */
 }
 
 .team-container{
-    display: grid;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 
 } 
 
 .team-members{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     gap: 0.5rem 1rem;
     position: relative;
 }
@@ -86,18 +93,16 @@ z-index: 1; */
     position: relative;
 }
 
+.team-join-img{
+    height: 20em;
+    width: max-content;
+    border-radius: 0.3em;
+    position: relative;
+}
+
 .team-member-img:hover{
     transition: 0.6s ease-in-out;
     opacity: 0;
-}
-
-.team-member-img-alt{
-    height: 20em;
-    width: 14em;
-    border-radius: 0.3em;
-    position: absolute;
-    left: 0;
-    
 }
 
 .team-member-sprite{
