--- a/style.css
+++ b/style.css
@@ -207,6 +207,20 @@ footer{
             width: 30%;
             /* flex-grow: 1; */
         }
+
+                .team-member-img {
+                    height: 20em;
+                    width: 15em;
+                    border-radius: 0.3em;
+                    position: relative;
+                }
+        
+                .team-join-img {
+                    height: 20em;
+                    width: 15em;
+                    border-radius: 0.3em;
+                    position: relative;
+                }
 }
 
 /* laptop scherm */
