--- a/style.css
+++ b/style.css
@@ -1,46 +1,44 @@
-:root
-
-
-body{
-font-family:'Gill Sans', 'Gill Sans MT';
-display: flex;
-flex-direction: column;
+:root body {
+    font-family: 'Gill Sans', 'Gill Sans MT';
+    display: flex;
+    flex-direction: column;
 
 
 }
 
-header{
-display: flex;
-width: 100%;
-flex-direction: row;
-margin-bottom: 1em;
-/* position: fixed;
+header {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    margin-bottom: 1em;
+    /* position: fixed;
 z-index: 1; */
 }
 
 
-.logo{
-    height:5em;
+.logo {
+    height: 5em;
 }
 
-.hamburger-placeholder{
+.hamburger-placeholder {
     height: 2.5em;
     margin-left: 13em;
     margin-top: 1.5em;
 }
 
 
-.digital-natives{
+.digital-natives {
     height: 4em;
     margin-bottom: 1em;
 }
 
-.text{
+.text {
     font-size: 19px;
     margin-bottom: 2em;
 
 }
-.text2{
+
+.text2 {
     opacity: 1;
     font-size: 19px;
     margin-bottom: 2em;
@@ -48,39 +46,41 @@ z-index: 1; */
     transition: transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6);
     transform: translateY(100%);
 }
-.show{
+
+.show {
     opacity: 1;
     transform: translateY(0);
 }
 
 
-.group-img{
-  height: auto;
-  width: 27em;
-  max-width: 100%;
-  border-radius: 0.3em;
-  margin-bottom: 1em;
+.group-img {
+    height: auto;
+    width: 27em;
+    max-width: 100%;
+    border-radius: 0.3em;
+    margin-bottom: 1em;
 }
 
-.team-container{
+.team-container {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
 
-} 
+}
 
-.team-members{
+.team-members {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     position: relative;
 }
 
-.team-member-card{
-    width: 50%; 
+.team-member-card {
+    width: 50%;
 
     /* flex-grow: 1; */
 }
+
 /* als er 2 kolommen kunnne
 dan krijgen de cards width: 50%
 */
@@ -89,27 +89,27 @@ dan krijgen de cards width: 50%
 dan krijgen de cards width:30%
 */
 
-.team-member-img{
+.team-member-img {
     height: 20em;
     width: 15em;
     border-radius: 0.3em;
     position: relative;
 }
 
-.team-join-img{
+.team-join-img {
     height: 20em;
     width: 15em;
     border-radius: 0.3em;
     position: relative;
 }
 
-.team-member-img:hover{
+.team-member-img:hover {
     transition: 0.6s ease-in-out;
     opacity: 0;
-    
+
 }
 
-.team-member-sprite{
+.team-member-sprite {
     /* opacity: 0; */
     height: 3em;
     width: 4em;
@@ -119,7 +119,7 @@ dan krijgen de cards width:30%
     top: 22em;
     margin-left: 10em;
 
-   
+
 }
 
 .team-member-sprite:hover {
@@ -132,64 +132,64 @@ dan krijgen de cards width:30%
 /* bounce animation */
 
 @keyframes bounce {
-    0%{
-        top:21em
+    0% {
+        top: 21em
     }
 
-    50%{
-        top:23em
+    50% {
+        top: 23em
     }
 
-    100%{
+    100% {
         top: 22em;
     }
 }
 
 
-.member-name{
+.member-name {
     font-size: 16px;
 }
 
-.member-job{
+.member-job {
     font-size: 14px;
     margin-bottom: 2em;
     margin-top: 0.5em;
     color: rgb(139, 144, 145);
 }
 
-.grey{
+.grey {
     color: rgb(122, 126, 126);
 }
 
-.display-imgs{
+.display-imgs {
     height: 20em;
 }
 
 
-.news-list{
+.news-list {
     display: flex;
     flex-direction: column;
     width: 20em;
     list-style: none;
 }
 
-.li-news{
-    display:flex;
+.li-news {
+    display: flex;
     flex-direction: row;
 }
 
-.li-news a{
+.li-news a {
     text-decoration: none;
 }
 
-.img-links{
+.img-links {
     height: 10em;
     width: auto;
 }
 
 
 
-.contact-informations{
+.contact-informations {
     background-color: rgb(255, 255, 112);
     height: 18em;
     margin-bottom: 6em;
@@ -201,99 +201,99 @@ dan krijgen de cards width:30%
 /* tablet scherm */
 @media screen and (min-width: 768px) {
     .team-member-card {
-            width: 30%;
-            margin-left: 1.4em;
-            /* flex-grow: 1; */
-        }
-                .member-name {
-                    font-size: 20px;
-                }
-        
-                .member-job {
-                    font-size: 16px;
-                    margin-bottom: 2em;
-                    margin-top: 0.5em;
-                    color: rgb(139, 144, 145);
-                }
+        width: 30%;
+        margin-left: 1.4em;
+        /* flex-grow: 1; */
+    }
 
-                .team-member-img {
-                    height: 20em;
-                    width: 15em;
-                    border-radius: 0.3em;
-                    position: relative;
-                }
-        
-                .team-join-img {
-                    height: 20em;
-                    width: 15em;
-                    border-radius: 0.3em;
-                    position: relative;
-                }
+    .member-name {
+        font-size: 20px;
+    }
 
-                                .text {
-                                    font-size: 24px;
-                                    margin-bottom: 2em;
-                
-                                }
-                
-                                .text2 {
-                                    opacity: 1;
-                                    font-size: 24px;
-                                    margin-bottom: 2em;
-                                    transition: all 360ms ease-out;
-                                    transition: transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6);
-                                    transform: translateY(100%);
-                                }
+    .member-job {
+        font-size: 16px;
+        margin-bottom: 2em;
+        margin-top: 0.5em;
+        color: rgb(139, 144, 145);
+    }
 
-                                                                .show {
-                                                                    opacity: 1;
-                                                                    transform: translateY(0);
-                                                                }
+    .team-member-img {
+        height: 20em;
+        width: 15em;
+        border-radius: 0.3em;
+        position: relative;
+    }
+
+    .team-join-img {
+        height: 20em;
+        width: 15em;
+        border-radius: 0.3em;
+        position: relative;
+    }
+
+    .text {
+        font-size: 24px;
+        margin-bottom: 2em;
+
+    }
+
+    .text2 {
+        opacity: 1;
+        font-size: 24px;
+        margin-bottom: 2em;
+        transition: all 360ms ease-out;
+        transition: transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+        transform: translateY(100%);
+    }
+
+    .show {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 /* laptop scherm */
 @media screen and (min-width: 1024px) {
 
-.team-member-card {
+    .team-member-card {
         width: 25%;
         margin-left: 4em;
-        
-}
 
-.member-name {
-    font-size: 23px;
-}
+    }
 
-.member-job {
-    font-size: 20px;
-    margin-bottom: 2em;
-    margin-top: 0.5em;
-    color: rgb(139, 144, 145);
-}
+    .member-name {
+        font-size: 23px;
+    }
 
-.team-member-img {
-    height: 22em;
-    width: 18em;
-    border-radius: 0.3em;
-    position: relative;
-}
+    .member-job {
+        font-size: 20px;
+        margin-bottom: 2em;
+        margin-top: 0.5em;
+        color: rgb(139, 144, 145);
+    }
 
-.team-join-img {
-    height: 22em;
-    width: 18em;
-    border-radius: 0.3em;
-    position: relative;
-}
+    .team-member-img {
+        height: 22em;
+        width: 18em;
+        border-radius: 0.3em;
+        position: relative;
+    }
+
+    .team-join-img {
+        height: 22em;
+        width: 18em;
+        border-radius: 0.3em;
+        position: relative;
+    }
 
 
 }
 
 /* groot laptop scherm */
 @media screen and (min-width: 1440px) {
-.team-member-card {
+    .team-member-card {
         width: 20%;
-       
+
         /* flex-grow: 1; */
     }
 }
-
