--- a/style.css
+++ b/style.css
@@ -4,51 +4,63 @@
 
 body {
     font-family: 'Gill Sans', 'Gill Sans MT';
-    display: flex;
-    flex-direction: column;
-
 }
 
 header {
     display: flex;
-    width: 100%;
     flex-direction: row;
     margin-bottom: 1em;
+    justify-content: space-between;
     /* position: fixed; */
 }
 
 
 .logo {
-    height: 5em;
+    height: 4.5rem;
 }
 
 .hamburger-placeholder {
-    height: 2.5em;
-    margin-left: 13.3em;
-    margin-top: 1.5em;
+    height: 2.1rem;
+    margin-top: 1.5em; 
    
 }
 
 
 .digital-natives {
-    height: 4em;
+    height: 3.7rem;
     margin-top: 2em;
     margin-bottom: 1em;
+    margin-left: 10%;
 }
 
+main{
+    display: flex;
+    flex-direction: column;
+     justify-content: center;
+    align-items: center;
+}
 .text {
-    font-size: 25px;
+    font-size: 20px;
     margin-bottom: 2em;
+    width: 80%;
 
+}
+
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .text2 {
     opacity: 1;
-    font-size: 25px;
+    font-size: 20px;
     margin-bottom: 2em;
     transition: all 360ms ease-out;
     transition: transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6);
     transform: translateY(100%);
+    width: 70%;
 }
 
 .show {
@@ -58,8 +70,8 @@ header {
 
 
 .group-img {
-    height: auto;
-    width: 27em;
+    height: 18rem;
+    width: auto;
     max-width: 100%;
     border-radius: 0.3em;
     margin-bottom: 1em;
@@ -81,14 +93,10 @@ main{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    position: relative;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
 
-}
-
-.team-member-card {
-    width: 50%;
-
-    /* flex-grow: 1; */
 }
 
 /* als er 2 kolommen kunnne
@@ -99,9 +107,14 @@ dan krijgen de cards width: 50%
 dan krijgen de cards width:30%
 */
 
+.team-member-card{
+    width: 12rem;
+    overflow: hidden;
+}
+
 .team-member-img {
-    height: 20em;
-    width: 15em;
+    height: 15rem;
+    width: auto;
     border-radius: 0.3em;
     position: relative;
 }
@@ -111,31 +124,6 @@ dan krijgen de cards width:30%
     width: 15em;
     border-radius: 0.3em;
     position: relative;
-}
-
-.team-member-img:hover {
-    transition: 0.6s ease-in-out;
-    opacity: 0;
-
-}
-
-.team-member-sprite {
-    /* opacity: 0; */
-    height: 3em;
-    width: 4em;
-    z-index: 3;
-    float: left;
-    position: relative;
-    top: 22em;
-    margin-left: 10em;
-
-
-}
-
-.team-member-sprite:hover {
-    animation-name: bounce;
-    animation-duration: 2.2s;
-    animation-iteration-count: 1s;
 }
 
 #video {
@@ -149,25 +137,10 @@ canvas[data-hidden=true] {
     display: none;
 }
 
-/* bounce animation */
-
-@keyframes bounce {
-    0% {
-        top: 21em
-    }
-
-    50% {
-        top: 23em
-    }
-
-    100% {
-        top: 22em;
-    }
-}
 
 
 .member-name {
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .member-job {
@@ -182,7 +155,8 @@ canvas[data-hidden=true] {
 }
 
 .display-imgs {
-    height: 20em;
+    height: 20rem;
+    width: auto;
 }
 
 
@@ -214,135 +188,8 @@ canvas[data-hidden=true] {
     height: 18em;
     margin-bottom: 6em;
     margin-top: 2em;
-    width: 25em;
+    height: 15rem;
+    width: auto;
 }
 
 
-/* tablet scherm */
-@media screen and (min-width: 768px) {
-
-    .digital-natives {
-            height: 5em;
-            margin-top: 2em;
-            margin-bottom: 1em;
-            margin-left: 19em
-        }
-
-
-    .team-member-card {
-        width: 30%;
-        margin-left: 1.4em;
-        /* flex-grow: 1; */
-    }
-
-    .member-name {
-        font-size: 20px;
-    }
-
-    .member-job {
-        font-size: 16px;
-        margin-bottom: 2em;
-        margin-top: 0.5em;
-        color: rgb(139, 144, 145);
-    }
-
-    .team-member-img {
-        height: 20em;
-        width: 15em;
-        border-radius: 0.3em;
-        position: relative;
-    }
-
-    .team-join-img {
-        height: 20em;
-        width: 15em;
-        border-radius: 0.3em;
-        position: relative;
-    }
-
-    .text {
-        font-size: 24px;
-        margin-bottom: 2em;
-        width: 28em;
-        margin-left: 15.3em;
-
-    }
-
-    .text2 {
-        opacity: 1;
-        font-size: 24px;
-        margin-bottom: 2em;
-        transition: all 360ms ease-out;
-        transition: transform 0.7s cubic-bezier(0.68, -0.6, 0.32, 1.6);
-        transform: translateY(100%);
-        width: 28em;
-        margin-left: 15.3em;
-
-    }
-
-    .show {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-/* laptop scherm */
-@media screen and (min-width: 1024px) {
-
-
-
-    .hamburger-placeholder {
-            height: 2.5em;
-            margin-left: 75em;
-            margin-top: 1.5em;
-    
-        }
-
-
-
-
-    .team-member-card {
-        width: 25%;
-        margin-left: 4em;
-
-    }
-
-    .member-name {
-        font-size: 23px;
-    }
-
-    .member-job {
-        font-size: 20px;
-        margin-bottom: 2em;
-        margin-top: 0.5em;
-        color: rgb(139, 144, 145);
-    }
-
-    .team-member-img {
-        height: 22em;
-        width: 18em;
-        border-radius: 0.3em;
-        position: relative;
-    }
-
-    .team-join-img {
-        height: 22em;
-        width: 18em;
-        border-radius: 0.3em;
-        position: relative;
-    }
-
-
-}
-
-/* groot laptop scherm */
-@media screen and (min-width: 1440px) {
-
-
-
-    .team-member-card {
-        width: 20%;
-
-        /* flex-grow: 1; */
-    }
-}
